--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
 <script>
-window.localtion.href='http://in-git.gitee.io/web-archive/'
-  
+   window.location.href='http://in-git.gitee.io/web-archive'
 </script>
