--- a/index.html
+++ b/index.html
@@ -1,3 +1,3 @@
 <script>
-   window.location.href='http://in-git.gitee.io/web-archive'
+   window.location.href='http://in-git.gitee.io/home'
 </script>
